--- a/src/renderer/components/Editor.css
+++ b/src/renderer/components/Editor.css
@@ -5,12 +5,13 @@
     display: flex;
     flex-direction: column;
   }
-  
+
   .title-area {
     padding: 20px;
     border-bottom: 1px solid #ccc;
+    position: relative;
   }
-  
+
   .title-input {
     width: 100%;
     font-size: 24px;
@@ -18,12 +19,12 @@
     border: none;
     outline: none;
   }
-  
+
   .body-area {
     flex: 1;
     padding: 20px;
   }
-  
+
   .content-input {
     width: 100%;
     height: 100%;
@@ -32,4 +33,12 @@
     border: none;
     outline: none;
   }
-  
+
+  .link-button {
+    position: absolute;
+    top: 0;
+    right: 0;
+    border: none;
+    background: none;
+    cursor: pointer;
+  }
