--- a/src/renderer/App.css
+++ b/src/renderer/App.css
@@ -4,7 +4,7 @@
  */
 body {
   position: relative;
-  color: white;
+  color: black;
   height: 100vh;
   background: #ffffff;
   font-family: sans-serif;
