--- a/src/renderer/App.css
+++ b/src/renderer/App.css
@@ -5,10 +5,11 @@
 body {
   position: relative;
   color: black;
-  height: 100vh;
+  height: 99vh;
   background: #ffffff;
   font-family: sans-serif;
   overflow-y: hidden;
+  border-top: 1px solid #f0f0f0;
   margin: 0;
 }
 
