--- a/src/renderer/components/Editor.css
+++ b/src/renderer/components/Editor.css
@@ -1,14 +1,15 @@
 /* Editor.css */
 .editor {
-    width: 100%;
+    width: 99%;
     height: 100%;
+    border-right: 1px solid #f0f0f0;
     display: flex;
     flex-direction: column;
   }
 
   .title-area {
     padding: 20px;
-    border-bottom: 1px solid #ccc;
+    /* border-bottom: 1px solid #ccc; */
     position: relative;
   }
 
@@ -28,7 +29,7 @@
   .content-input {
     width: 100%;
     height: 100%;
-    font-family: 'Courier New', monospace;
+    font-family: 'Sans-serif', Helvetica;
     font-size: 16px;
     border: none;
     outline: none;
