--- a/src/renderer/components/Sidebar.css
+++ b/src/renderer/components/Sidebar.css
@@ -1,47 +1,33 @@
-.sidebar {
-    width: 250px;
-    height: 100vh;
-    overflow-y: auto;
-    padding: 10px;
-    background-color: #f4f4f4;
-    color: #303030;
-  }
-  
-  .sidebar input {
-    width: 100%;
-    padding: 8px;
-    margin-bottom: 10px;
-  }
-  
-  .sidebar ul {
-    list-style: none;
-    padding: 0;
-  }
-  
-  .sidebar li {
-    padding: 8px;
-    cursor: pointer;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  
-  .sidebar li:hover {
-    background-color: #ddd;
-  }
-  
-  .delete-btn {
-    padding: 0 6px;
-    font-size: 14px;
-    color: #ff0000;
-    border: none;
-    background: none;
-    cursor: pointer;
-    opacity: 0; /* Make the button fully transparent */
-    transition: opacity 0.3s ease; /* Smooth transition for the opacity */
-  }
-  
-  .sidebar li:hover .delete-btn {
-    opacity: 1; /* Only show the delete button when hovering over the list item */
-  }
-  
+/* Sidebar.css */
+
+.sidebar-container {
+  position: relative;
+  height: 100vh;  // Adjust the height as needed
+  overflow-y: auto;
+}
+.menu-container {
+  height: 100vh; /* Adjust this if necessary */
+  overflow-y: auto; /* Enables vertical scrolling */
+  padding-bottom: 50px;
+}
+/* Styling the scrollbar track (part the actual scrollbar slides within) */
+.menu-container::-webkit-scrollbar {
+  width: 8px; /* scrollbar width */
+  background-color: #F5F5F5; /* background color of the track */
+}
+/* Styling the scrollbar handle */
+.menu-container::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: #ccc; /* scrollbar color */
+  border: 2px solid #F5F5F5; /* same as track color for "floating" effect */
+}
+/* Optional: styling the scrollbar handle on hover */
+.menu-container::-webkit-scrollbar-thumb:hover {
+  background-color: #b3b3b3;
+}
+
+
+
+
+
+
