--- a/src/renderer/components/Editor.css
+++ b/src/renderer/components/Editor.css
@@ -1,45 +1,51 @@
-/* Editor.css */
 .editor {
-    width: 99%;
-    height: 100%;
-    border-right: 1px solid #f0f0f0;
-    display: flex;
-    flex-direction: column;
-  }
+  width: 99%;
+  height: 100%;
+  border-right: 1px solid #f0f0f0;
+  display: flex;
+  flex-direction: column;
+  position: relative; /* Add this to establish a positioning context */
+}
 
-  .title-area {
-    padding: 20px;
-    /* border-bottom: 1px solid #ccc; */
-    position: relative;
-  }
+.title-area {
+  padding: 20px;
+  /* border-bottom: 1px solid #ccc; */
+  position: relative;
+}
 
-  .title-input {
-    width: 100%;
-    font-size: 24px;
-    font-weight: bold;
-    border: none;
-    outline: none;
-  }
+.title-input {
+  width: 100%;
+  font-size: 24px;
+  font-weight: bold;
+  border: none;
+  outline: none;
+}
 
-  .body-area {
-    flex: 1;
-    padding: 20px;
-  }
+.body-area {
+  flex: 1;
+  padding: 20px;
+}
 
-  .content-input {
-    width: 100%;
-    height: 100%;
-    font-family: 'Sans-serif', Helvetica;
-    font-size: 16px;
-    border: none;
-    outline: none;
-  }
+.content-input {
+  width: 100%;
+  height: 100%;
+  font-family: 'Sans-serif', Helvetica;
+  font-size: 16px;
+  border: none;
+  outline: none;
+}
 
-  .link-button {
-    position: absolute;
-    top: 0;
-    right: 0;
-    border: none;
-    background: none;
-    cursor: pointer;
-  }
+.link-button {
+  position: absolute;
+  top: 0;
+  right: 0;
+  border: none;
+  background: none;
+  cursor: pointer;
+}
+
+.float-button {
+  position: absolute;
+  bottom: 35px;
+  right: 14px; /* Adjust this to ensure it's within the editor */
+}
